[workspace] 
members = [
    "crates/treereduce",
    "crates/treereduce-c",
    "crates/treereduce-java",
    "crates/treereduce-javascript",
    "crates/treereduce-rust",
    "crates/treereduce-souffle",
]

# https://nnethercote.github.io/perf-book/build-configuration.html
[profile.release]
lto = true