[workspace] 
members = [
    "crates/treereduce",
    "crates/treereduce-c",
    "crates/treereduce-java",
    "crates/treereduce-javascript",
    "crates/treereduce-lua",
    "crates/treereduce-rust",
    "crates/treereduce-souffle",
    "crates/treereduce-swift",
]

# https://nnethercote.github.io/perf-book/build-configuration.html
[profile.release]
lto = true

[workspace.dependencies]
treereduce = { version = "0.4.0", path = "./crates/treereduce", features = ["cli"] }
