[package]
name = "treedd"
description = "Fast, syntax-aware, multi-language program reducer based on delta debugging"
version = "0.0.0"
keywords = ["delta-debugging", "program-reducer", "test-case-minimization"]
edition = "2021"
authors = ["Langston Barrett <langston.barrett@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/langston-barrett/treedd"
repository = "https://github.com/langston-barrett/treedd"

[dependencies]
tree-sitter = "0.20"