[package]
name = "treereduce-java"
description = "Fast, parallel, syntax-aware program reducer for Java"
version = "0.2.1"
keywords = ["program-reducer", "minimization", "test-case-reduction", "java"]
edition = "2021"
authors = ["Langston Barrett <langston.barrett@gmail.com>"]
license = "MIT"
readme = "../../README.md"
homepage = "https://github.com/langston-barrett/treereduce"
repository = "https://github.com/langston-barrett/treereduce"

[dependencies]
anyhow = "1"
treereduce = { version = "0.2.1", path = "../treereduce", features = ["cli"] }
tree-sitter-java = { version = "0.20", git = 'https://github.com/tree-sitter/tree-sitter-java' }
