[package]
name = "treereduce-javascript"
description = "Fast, parallel, syntax-aware program reducer for JavaScript"
version = "0.4.0"
keywords = ["program-reducer", "minimization", "test-case-reduction", "javascript"]
edition = "2021"
authors = ["Langston Barrett <langston.barrett@gmail.com>"]
license = "MIT"
readme = "../../README.md"
homepage = "https://github.com/langston-barrett/treereduce"
repository = "https://github.com/langston-barrett/treereduce"

[dependencies]
anyhow = "1"
treereduce = { workspace = true }
tree-sitter-javascript = "0.25"
