[package]
name = "treereduce-rust"
description = "Fast, parallel, syntax-aware program reducer for Rust"
version = "0.4.0"
keywords = ["program-reducer", "minimization", "test-case-reduction", "rust"]
edition = "2021"
authors = ["Langston Barrett <langston.barrett@gmail.com>"]
license = "MIT"
readme = "../../README.md"
homepage = "https://github.com/langston-barrett/treereduce"
repository = "https://github.com/langston-barrett/treereduce"

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
treereduce = { workspace = true }
tree-sitter-rust = "0.24"
