[package]
name = "treereduce-souffle"
description = "Fast, parallel, syntax-aware program reducer for Soufflé"
version = "0.1.0"
keywords = ["program-reducer", "test-case-minimization", "test-case-reduction", "souffle"]
edition = "2021"
authors = ["Langston Barrett <langston.barrett@gmail.com>"]
license = "MIT"
readme = "../../README.md"
homepage = "https://github.com/langston-barrett/treereduce"
repository = "https://github.com/langston-barrett/treereduce"

[dependencies]
anyhow = "1.0"
treereduce = { version = "0.1.0", path = "../treereduce", features = ["cli"] }
tree-sitter-souffle = { version = "0.4.0" }
