[package]
name = "treereduce-souffle"
description = "Fast, parallel, syntax-aware program reducer for Soufflé"
version = "0.4.1"
keywords = ["program-reducer", "minimization", "test-case-reduction", "souffle"]
edition = "2021"
authors = ["Langston Barrett <langston.barrett@gmail.com>"]
license = "MIT"
readme = "../../README.md"
homepage = "https://github.com/langston-barrett/treereduce"
repository = "https://github.com/langston-barrett/treereduce"

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
treereduce = { workspace = true }
tree-sitter-souffle = { version = "0.5.0" }
