[package]
name = "treereduce-swift"
description = "Fast, parallel, syntax-aware program reducer for Swift"
version = "0.3.1"
keywords = ["program-reducer", "minimization", "test-case-reduction", "swift"]
edition = "2021"
authors = ["Langston Barrett <langston.barrett@gmail.com>"]
license = "MIT"
readme = "../../README.md"
homepage = "https://github.com/langston-barrett/treereduce"
repository = "https://github.com/langston-barrett/treereduce"

[dependencies]
anyhow = "1.0"
treereduce = { version = "0.3.1", path = "../treereduce", features = ["cli"] }
tree-sitter-swift = "0.7.0"
