[package]
name = "treereduce"
description = "Fast, syntax-aware, multi-language program reducer based on delta debugging"
version = "0.0.0"
keywords = ["program-reducer", "test-case-minimization", "test-case-reduction"]
edition = "2021"
authors = ["Langston Barrett <langston.barrett@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/langston-barrett/treereduce"
repository = "https://github.com/langston-barrett/treereduce"

[dev-dependencies]
bencher = "0.1"
tree-sitter-c = "0.20"
tree-sitter-java = { version = "0.20", git = 'https://github.com/tree-sitter/tree-sitter-java' }

[dependencies]
anyhow = { version = "1", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
clap-verbosity-flag = { version = "2", optional = true }
env_logger = { version = "0.9", optional = true }
log = "0.4"
num_cpus = { version = "1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "1"
tracing-mutex = "0.2"
tree-sitter = "0.20"
tree-sitter-edit = "0.1"

[features]
default = []
cli = [
  "dep:anyhow",
  "dep:clap",
  "dep:clap-verbosity-flag",
  "dep:env_logger",
  "dep:num_cpus",
]
