[package]
name = "treereduce"
description = "Fast, syntax-aware, multi-language program reducer based on delta debugging"
version = "0.2.1"
keywords = ["program-reducer", "minimization", "test-case-reduction"]
edition = "2021"
authors = ["Langston Barrett <langston.barrett@gmail.com>"]
license = "MIT"
readme = "../../README.md"
homepage = "https://github.com/langston-barrett/treereduce"
repository = "https://github.com/langston-barrett/treereduce"

[dev-dependencies]
bencher = "0.1"
tree-sitter-c = "0.20"
tree-sitter-java = { version = "0.20", git = 'https://github.com/tree-sitter/tree-sitter-java' }

[dependencies]
anyhow = { version = "1", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
clap-verbosity-flag = { version = "2", optional = true }
log = "0.4"
nu-ansi-term = { version = "0.47", optional = true }
num_cpus = { version = "1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"], optional = true }
tracing-mutex = "0.2"
tree-sitter = "0.20"
tree-sitter-edit = "0.3"
regex = "1.7.1"
wait-timeout = "0.2"

[features]
default = []
cli = ["dep:anyhow", "dep:clap", "dep:clap-verbosity-flag", "dep:nu-ansi-term", "dep:num_cpus", "dep:tracing-subscriber"]
