[package]
name = "treereduce"
description = "Fast, syntax-aware, multi-language program reducer based on delta debugging"
version = "0.4.1"
keywords = ["program-reducer", "minimization", "test-case-reduction"]
edition = "2021"
authors = ["Langston Barrett <langston.barrett@gmail.com>"]
license = "MIT"
readme = "../../README.md"
homepage = "https://github.com/langston-barrett/treereduce"
repository = "https://github.com/langston-barrett/treereduce"

[lints]
workspace = true

[dev-dependencies]
bencher = "0.1"
tree-sitter-c = "0.24"
tree-sitter-java = "0.23"

[dependencies]
anyhow = { version = "1", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
clap-verbosity-flag = { version = "3", optional = true }
log = "0.4"
nu-ansi-term = { version = "0.50", optional = true }
num_cpus = { version = "1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"], optional = true }
tree-sitter = "0.25"
tree-sitter-edit = "0.4"
regex = "1.12.2"
wait-timeout = "0.2"

[features]
default = []
cli = [
  "dep:anyhow",
  "dep:clap",
  "dep:clap-verbosity-flag",
  "dep:nu-ansi-term",
  "dep:num_cpus",
  "dep:tracing-subscriber",
]
